unpackaged/objects/Error_Log__c.object
<CustomObject>
    <description>This object will store the error whenever the API call failed.</description>
    <fields>
        <fullName>Admin_Application_Id__c</fullName>
        <label>Admin Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Json_Request_String__c</fullName>
        <label>Json Request String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Class__c</fullName>
        <label>Source Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Error__c</fullName>
        <label>Status Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source_Method__c</fullName>
        <label>source Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>